--- a/index.html
+++ b/index.html
@@ -3,9 +3,188 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gamemania</title>
+    <link rel="stylesheet" href="gamer.css">
+    <link rel="shortcut icon" href="images/game.png" type="image/x-icon">
+    <style>
+        .primary{
+            color: rgb(230, 39, 144);
+        }
+        .button-0{
+            background-color: red;
+            border: none;
+            border-radius: 30px 30px;
+        }
+        .button-0:hover{
+            background-color: blue;
+            color: brown;
+            cursor: pointer;
+        }
+        @media screen and (max-width:600px) {
+            .head{
+                flex-direction: column;
+            }
+            nav > ul{
+                flex-direction: column;
+            }
+            .demo{
+                flex-direction: column;
+            }
+            .more{
+                flex-direction: column;
+            }
+            .{
+                flex-direction: column;
+            }
+            .card{
+                flex-direction: column;
+            }
+            .play{
+                flex-direction: column;
+            }
+        }
+    </style>
 </head>
 <body>
-    
+    <header>
+<div class="head">
+   <div class="logo">
+    <img src="images/game.png" alt="" width="50" height="50">
+    <h4><span class="primary">Game</span>Mania</h4>
+   </div>
+<nav>
+    <ul>
+        <button class="button-0"><li>About</li></button>
+        <button class="button-0"><li>Developer</li></button>
+        <button class="button-0"><div class="nav_bar"><li>Follow us on</li> <img src="images/ytube.png" alt="" height="25" width="25"> <img src="images/TikTok.png" alt="" height="22" width="27"></div></button>
+    </ul>
+</nav>
+</div>
+    </header>
+    <main>
+        <!-- Demo section -->
+        <section>
+<div class="demo">
+    <div class="content">
+
+<div class="extra">
+    <div class="icon-heading">
+    <h4>PLAY LIKE THE</h4>
+    <h1>G.O.A.T</h1>
+    </div>
+    <div class="icon">
+    <p><img src="images/play (1).png" alt="" height="11" width="11"> 1-Click Instant play</p>
+    <p><img src="images/Download.png" alt="" height="14" width="15"> Download</p>
+    <p><img src="images/people.png" alt="" height="11" width="11"> More then 3k people Downloaded</p>
+    </div>
+    <div class="button">
+    <button class="button-1">Sign in now</button>
+    <Button class="button-2">Play online</Button>
+    </div>
+</div>
+    </div>
+    <div class="play-picture">
+        <img src="images/Group 18.png" alt="" height="300" width="300" >
+    </div>
+</div>
+        </section>
+        <!-- Know more section -->
+        <div class="more">
+            <div class="left" >
+<img src="images/pngwing 4.png" alt="" height="300" width="500">
+            </div>
+            <div class="right" style="text-align: right;">
+<h1>We are gamer</h1>
+<h6>Determine the purpose and focus of your gaming website. <br> Are you planning to provide gaming news, reviews,<br> tutorials, or a gaming community?<br> Choosing a specific niche will help you target your audience more effectively.</h6><br>
+<button class="button-1">Know more</button>
+<h4>Our purpose</h4>
+<h3>"Unleash the gamer in everyone"</h3>
+            </div>
+        </div>
+        <!-- online section -->
+        <div class="online">
+            <h1 style="text-align: center;">Online games Funny videos</h1>
+            <p style="text-align: center;">A collection of hilario's video to make you laugh</p>
+            <div class="card">
+                <div class="card-1">
+                    <img  src="images/Rectangle 4.png" alt="" height="200" width="200">
+                    <p>See how vax fly</p>
+                </div>
+                <div class="card-2">
+                    <img src="images/Rectangle 5.png" alt="" height="200" width="200">
+                    <p>Download it to see</p>
+                </div>
+                <div class="card-3">
+                    <img src="images/Rectangle 7.png" alt="" height="200" width="200">
+                    <p>How fast he is!</p>
+                </div>
+                <div class="card-4">
+                    <img src="images/Rectangle 6.png" alt="" height="200" width="200">
+                    <p>Dragon man makes</p>
+                </div>
+            </div>
+        </div>
+        <!--play sectio -->
+        <section>
+            <div class="play">
+                <div class="info">
+                <h1>Play instantly</h1>
+                <h4>No Download</h4>
+                <h4>No Install</h4>
+                <h6>Steam is a digital distribution platform where you can buy <br> and download a wide range of games. <br> It also offers social features, community forums, and game-related news.</h6>
+                </div>
+            <div class="play-image">
+                <img src="images/combined.png" alt="" height="400" width="300">
+            </div>
+            </div>
+        </section>
+        <!-- icon section -->
+        <div class="game-icon">
+            <button class="button-icon"><img src="images/Rectangle 12.png" alt="" height="20" width="20">Adventure</button>
+            <button class="button-icon"><img src="images/Rectangle 11.png" alt="" height="20" width="20">Acarde</button>
+            <button class="button-icon"><img src="images/Rectangle 13.png" alt="" height="20" width="20">Sports</button>
+            <button class="button-icon"><img src="images/Rectangle 14.png" alt="" height="20" width="20">History</button>
+            <button class="button-icon"><img src="images/Rectangle 15.png" alt="" height="20" width="20">Cuddle</button>
+            <button class="button-icon"><img src="images/Rectangle 16.png" alt="" height="20" width="20">Fight</button>
+            <button class="button-icon"><img src="images/Rectangle 17.png" alt="" height="20" width="20">Roboda</button>
+            <button class="button-icon"><img src="images/Rectangle 18.png" alt="" height="20" width="20">Tourism</button>
+            <button class="button-icon"><img src="images/Rectangle 19.png" alt="" height="20" width="20">Soccer</button>
+        </div>
+    </main>
+    <!-- footer-section -->
+    <footer>
+
+<div class="logo">
+    <img src="images/game.png" alt="" width="50" height="50">
+    <h4><span class="primary">Game</span><span style="color: white;">Mania</span></h4>
+</div>
+
+<div class="footer-links-text">
+    <h5>Our story</h5>
+    <h5>Games</h5>
+    <h5>Web games</h5>
+    <h5>Support</h5>
+    <h5>Career</h5>
+    <h5>My account</h5>
+</div>
+
+<div class="social-links">
+    <img src="images/insta.png" alt="" height="20" width="20">
+    <img src="images/fb.png" alt="" height="20" width="20">
+    <img src="images/twit (1).png" alt="" height="20" width="20">
+    <img src="images/Whatsapp.png" alt="" height="20" width="20">
+    <img src="images/apple.png" alt="" height="20" width="20">
+</div>
+
+<div class="footer-text">
+    <h5>Terms and Condition</h5>
+    <h5>Privacy Policy</p>
+    <h5>Cookie Policy</h5>
+    <h5>Privacy Settings</h5>
+</div>
+
+<h6><small>Play games all right reserved @gamemania @2023-2024 Gamer Bangladesh</small></h6>
+
+</footer>
 </body>
 </html>
