--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             .play{
                 flex-direction: column;
             }
+            .game-icon{
+                display: grid;
+                grid-template-columns: repeat(3,1fr);
+                gap: 20px;
+                
+            }
         }
     </style>
 </head>
@@ -101,41 +107,57 @@
 <h3>"Unleash the gamer in everyone"</h3>
             </div>
         </div>
-        <!-- online section -->
+        <!-- online game section -->
         <div class="online">
             <h1 style="text-align: center;">Online games Funny videos</h1>
             <p style="text-align: center;">A collection of hilario's video to make you laugh</p>
+
             <div class="card">
+
                 <div class="card-1">
                     <img  src="images/Rectangle 4.png" alt="" height="200" width="200">
-                    <p>See how vax fly</p>
+                    <h5>See how vortex fight</h5>
                 </div>
+
                 <div class="card-2">
                     <img src="images/Rectangle 5.png" alt="" height="200" width="200">
-                    <p>Download it to see</p>
+                    <h5>Download it to see</h5>
                 </div>
+
                 <div class="card-3">
-                    <img src="images/Rectangle 7.png" alt="" height="200" width="200">
-                    <p>How fast he is!</p>
-                </div>
-                <div class="card-4">
                     <img src="images/Rectangle 6.png" alt="" height="200" width="200">
-                    <p>Dragon man makes</p>
+                    <div class="middle">
+                        <div class="text-1"><img src="images/play (1).png" alt="" height="50" width="50"><p>watch now</p>
+                    </div>
+                    </div>
+                    <h5>How fast he is!</h5>
                 </div>
+
+                <div class="card-4">
+                    <img src="images/Rectangle 7.png" alt="" height="200" width="200">
+                    <h5>Dragon man makes</h5>
+                </div>
+
             </div>
+
         </div>
-        <!--play sectio -->
+        <!--play instantly started -->
         <section>
             <div class="play">
                 <div class="info">
                 <h1>Play instantly</h1>
-                <h4>No Download</h4>
-                <h4>No Install</h4>
+                <h4>No Download <br>
+                    No Install</h4>
                 <h6>Steam is a digital distribution platform where you can buy <br> and download a wide range of games. <br> It also offers social features, community forums, and game-related news.</h6>
                 </div>
+
             <div class="play-image">
-                <img src="images/combined.png" alt="" height="400" width="300">
+                <img src="images/Rectangle 55.png" alt="">
+                <div class="play-image-2">
+                    <img src="images/Rectangle 66.png" alt="">
+                </div>
             </div>
+            
             </div>
         </section>
         <!-- icon section -->
